k8s/deployments/headless-service.yml
# ClusterIP Service for the main application, for the ingress to forward traffic to.
apiVersion: v1
kind: Service
metadata:
  name: privee
spec:
  type: ClusterIP
  selector:
    app: privee
  ports:
  - name: http
    port: 80
    targetPort: 4000
    protocol: TCP
---
# Headless Service for Erlang clustering
apiVersion: v1
kind: Service
metadata:
  name: privee-app-svc-headless
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 4369
      targetPort: epmd
      protocol: TCP
      name: epmd
  selector:
    app: privee
